--- a/can_i_publish/libel/package.json
+++ b/can_i_publish/libel/package.json
@@ -6,11 +6,6 @@
         "sass": {
             "patterns": ["static/scss"],
             "extensions": "scss"
-        },
-        "jsmin": {
-            "patterns": ["static"],
-            "ignore": ["static/scripts/main.min.js"],
-            "extensions": "js"
         }
     },
     "scripts": {
@@ -18,6 +13,7 @@
         "jsmin": "minify static/main.js > static/main.min.js",
         "sass": "sass static/scss/style.scss static/style.css && npm run minify",
         "minify": "minify static/style.css > static/style.min.css && npm run jsmin",
+        "watch": "npm-watch",
         "build": "npm run compile && npm run minify"
     },
     "repository": {
@@ -31,6 +27,7 @@
     "homepage": "",
     "dependencies": {
         "minify": "^5.1.1",
-        "sass": "^1.26.10"
+        "sass": "^1.26.10",
+        "npm-watch": "^0.11.0"
     }
 }
